--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -39,7 +39,7 @@
                     </div>
                     <ul class="py-1 font-light text-gray-500 dark:text-gray-400" aria-labelledby="userMenuDropdownButton">
                         <li>
-                            <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">
+                            <a href="{{ path('app_user_edit', {'id': app.user.id} ) }}" class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">
                                 Ezarpenak
                             </a>
                         </li>
