--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -2,7 +2,7 @@
     <nav class="fixed z-30 w-full bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700 py-3 px-4">
         <div class="flex justify-between items-center mx-auto">
             <div class="flex justify-start items-center">
-                <a href="{{ path('app_default') }}" class="flex mr-14">
+                <a href="{{ path('app_hauteskundea_index') }}" class="flex mr-14">
                     {{ ux_icon('game-icons:vote', {'class': 'mr-3 dark:text-white w-8 h-8'}) }}
                     <span class="self-center hidden sm:flex text-2xl font-semibold whitespace-nowrap dark:text-white">Hautesmahai zozketak</span>
                 </a>
