form login doctrine

--- a/templates/security/choose_login.html.twig
+++ b/templates/security/choose_login.html.twig
@@ -33,6 +33,9 @@
                 <div class="flex justify-center items-center">
                     <a href="{{ path('app_ldap') }}" type="submit" class="w-full px-5 py-3 text-base font-medium text-center text-white bg-primary-700 rounded-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 sm:w-auto dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Hasi saioa LDAP erabiltzen</a>
                 </div>
+                <div class="flex justify-center items-center">
+                    <a href="{{ path('app_form_login') }}" type="submit" class="w-full px-5 py-3 text-base font-medium text-center text-white bg-primary-700 rounded-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 sm:w-auto dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Hasi saioa Erabiltzaile / Pasahitza erabiltzen</a>
+                </div>
 
             </div>
         </div>
