--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -37,13 +37,15 @@
                             <span class="block text-sm font-light text-gray-500 truncate dark:text-gray-400">{{ app.user.email }}</span>
                         {% endif %}
                     </div>
-                    <ul class="py-1 font-light text-gray-500 dark:text-gray-400" aria-labelledby="userMenuDropdownButton">
-                        <li>
-                            <a href="{{ path('app_user_edit', {'id': app.user.id} ) }}" class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">
-                                Ezarpenak
-                            </a>
-                        </li>
-                    </ul>
+                    {% if app.user %}
+                        <ul class="py-1 font-light text-gray-500 dark:text-gray-400" aria-labelledby="userMenuDropdownButton">
+                            <li>
+                                <a href="{{ path('app_user_edit', {'id': app.user.id} ) }}" class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">
+                                    Ezarpenak
+                                </a>
+                            </li>
+                        </ul>
+                    {% endif %}
                     <ul class="py-1 font-light text-gray-500 dark:text-gray-400" aria-labelledby="dropdown">
                         <li>
                             <a href="{{ path('app_logout') }}" class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">{{ "Saioa itxi" | trans }}</a>
