--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,6 +41,7 @@
 
     <div id="main-content" class="flex flex-col relative w-full x-auto h-screen overflow-y-auto bg-gray-50 dark:bg-gray-900">
         <main>
+            {% block breadcrumbs %}
             <div class="mb-4 col-span-full xl:mb-2">
                 <nav class="flex mb-5" aria-label="Breadcrumb">
                     <ol class="inline-flex items-center space-x-1 text-sm font-medium md:space-x-2">
@@ -67,6 +68,7 @@
                     </ol>
                 </nav>
             </div>
+            {% endblock %}
             {% block body %}
             {% endblock %}
         </main>
