--- a/templates/basic.html.twig
+++ b/templates/basic.html.twig
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ordezkatu">
+    <meta name="description" content="Hautesmahaiak">
     <meta name="author" content="Iker Ibarguren">
     <meta name="view-transition">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-    <title>Ordezkatu</title>
+    <title>Hautesmahaiak</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
