--- a/templates/herritarra/ordezkatu.html.twig
+++ b/templates/herritarra/ordezkatu.html.twig
@@ -1,6 +1,6 @@
 {% extends 'modalBase.html.twig' %}
 
-{% block title %}Ordezkatu {% endblock %}
+{% block title %}Hautesmahaiak {% endblock %}
 
 {% block body %}
     <div class="relative modal:m-0 modal:p-0  w-full max-h-full">
