--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -121,12 +121,12 @@
                         <p class="mb-2.5">{{ "mezua" | trans }}</p>
                         <p class="text-center">
                             <a target="_blank" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
-                               href="https://bideoak2.euskadi.eus/2024/03/04/news_92205/Manual_integrantes_mesa_electoral__Web_Eusk_.pdf"
+                               href="https://info.eleccioneseuropeas2024.es/pdf/miembros_mesas/MMM_EPE_2024_euskera.pdf"
                             >{{ "Euskaraz" | trans }}</a>
                             &nbsp;
                             &nbsp;
                             <a target="_blank" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
-                               href="https://bideoak2.euskadi.eus/2024/03/04/news_92205/Manual_integrantes_mesa_electoral__Web_Cast_.pdf"
+                               href="https://info.eleccioneseuropeas2024.es/pdf/miembros_mesas/MMM_EPE_2024_castellano.pdf"
                             >{{ "Erdaraz" | trans }}</a>
                         </p>
                     </div>
@@ -142,7 +142,7 @@
 
                             <p>Zozketako izendapenen aurkako alegazioak Donostiako Eskualdeko Hauteskunde Batzordean aurkeztu ahal izango dira:</p>
 
-                            <ul>
+                            <ul class="list-disc">
                                 <li>Kalkutako Teresa Plaza 1 (Atotxa)</li>
                                 <li>Aitzakia alegatzeko eskabide-orria: <a target="_blank" href="https://www.euskadi.eus/contenidos/informacion/w_in_24_pv_calend_miemb_mesa/eu_def/adjuntos/19.EHMM_4.3_anv_edit.pdf">Euskaraz</a> -
                                     <a target="_blank" href="https://www.euskadi.eus/contenidos/informacion/w_in_24_pv_miemb_guia/es_def/adjuntos/20.EHMM_4.3_rev_edit.pdf">Gaztelaniaz</a></li>
